--- a/css/app.css
+++ b/css/app.css
@@ -72,7 +72,7 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #e9ebec;
+  background-color: #f3f3f3;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -82,8 +82,7 @@ body {
 hr {
   box-sizing: content-box;
   height: 0;
-  overflow: visible;
-  
+  overflow: visible; 
 }
 
 h1,
@@ -92,13 +91,11 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin-top: 0; 
 }
 
 p {
-  margin-top: 0;
-  margin-bottom: 1rem;
+  margin-top: 0; 
 }
 
 abbr[title],
@@ -385,7 +382,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  margin-bottom: 0.5rem;
+  margin-bottom:0;
   font-weight: 500;
   line-height: 1.2;
 }
@@ -591,7 +588,7 @@ pre code {
 @media (min-width: 576px) {
   .container-sm,
   .container {
-    max-width: 540px;
+    max-width: 98%;
   }
 }
 
@@ -599,7 +596,7 @@ pre code {
   .container-md,
   .container-sm,
   .container {
-    max-width: 720px;
+    max-width: 95%;
   }
 }
 
@@ -608,7 +605,7 @@ pre code {
   .container-md,
   .container-sm,
   .container {
-    max-width: 960px;
+    max-width: 93%;
   }
 }
 
@@ -618,7 +615,8 @@ pre code {
   .container-md,
   .container-sm,
   .container {
-    max-width: 1140px;
+    min-width: 1140px;
+    max-width: 80%;
   }
 }
 
@@ -4405,15 +4403,13 @@ input[type=button].btn-block {
   flex-wrap: wrap;
   padding-left: 0;
   margin-bottom: 0;
-  list-style: none;
-  
+  list-style: none; 
 }
 .navbar{border-radius: 2px!important;}
 
 .nav-link {
   display: block;   
-}
- 
+} 
 
 .nav-link.disabled {
   color: #6c757d;
@@ -4432,8 +4428,9 @@ input[type=button].btn-block {
   padding:15px  0;
 }
 .navbar-nav .active,.nav-item:hover,.nav-item:focus{
-  background-color:#790600!important;
-}
+  background-color:#790600!important;border-bottom:2px solid #FFCF40;
+} 
+
 .nav-tabs .nav-item {
   margin-bottom: -1px; 
 }
@@ -4945,7 +4942,7 @@ input[type=button].btn-block {
   background-color: #fff;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
+  border-radius: 0.15rem;
 }
 
 .card > hr {
@@ -8524,6 +8521,30 @@ button.bg-dark:focus {
 .ml-5,
 .mx-5 {
   margin-left: 3rem !important;
+}
+
+.m-6 {
+  margin: 5rem !important;
+}
+
+.mt-6,
+.my-6 {
+  margin-top: 5rem !important;
+}
+
+.mr-6,
+.mx-6 {
+  margin-right: 5rem !important;
+}
+
+.mb-6,
+.my-6 {
+  margin-bottom: 5rem !important;
+}
+
+.ml-6,
+.mx-6 {
+  margin-left: 5rem !important;
 }
 
 .p-0 {
